# Magic_Arrow_Man_Game

./: ArrowPhysics.cpp  ArrowPhysics.hpp  AudioPlayer.cpp  AudioPlayer.hpp  BowObject.cpp  BowObject.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Gui.cpp  Gui.hpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  MAM.json  MAMGame.cpp  MAMGame.hpp  MAM_old.json  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayerController.cpp  PlayerController.hpp  PlayerObject.cpp  PlayerObject.hpp  PlayerPhysics.cpp  PlayerPhysics.hpp  README.md
Assets/Levels/: Level-basket.json  Level-boomerang.json  Level-dropshot.json  Level-elevator.json  Level-jumpingfloatyhard.json  Level-jumpshot.json  Level-leapoffaith.json  Level-maze.json  Level-pillars.json  Level-takeoff.json  Level-templeofdoom.json  Level-thepit.json  Level-thereandbackagain.json  Level-tutorial-callthearrow.json  Level-tutorial-climb.json  Level-tutorial-dontfall.json  Level-tutorial-fly.json  Level-tutorial-jump.json  Level-tutorial-move.json  Level-yoyo.json  MAM_extra.json  MAM_monster_target.json  MAM_tiles_extra.json  Progress.json
Assets/Sprites/: MAMProject.tps  textureProject.tps
Levels/: Level-arrowmazeWIP.json  Level-basket.json  Level-beginning.json  Level-boomerang.json  Level-dropshot.json  Level-jumpingfloatyhard.json  Level-jumpshotv1.json  Level-leapoffaith.json  Level-maze.json  Level-templeofdoom.json  Level-testrun.json  Level-thestart.json  Level-yoyo.json  Level0.json  Level1.json  MAM_TileSet.json  MAM_tiles.json  Progress.json
src/: BowObject.cpp  BowObject.hpp  Component.cpp  Component.hpp  GameObject.hpp  MAMGame.cpp  MAMGame.hpp  Main.cpp  PlayerController.cpp  PlayerController.hpp  PlayerObject.cpp  PlayerObject.hpp  SpriteComponent.cpp  SpriteComponent.hpp
src/modules/gui/: Gui.cpp  (+3 more)
(+13 files in other folders)
